--- a/app/src/main/res/layout/activity_video_in_feed.xml
+++ b/app/src/main/res/layout/activity_video_in_feed.xml
@@ -25,7 +25,7 @@
             android:layout_height="300dp"
             android:layout_margin="10dp"
             android:visibility="visible"
-            app:videoAutoPlay="true"
+            app:videoAutoPlay="false"
             app:displayFooter="true"
             app:displayHeader="true"
             app:footerTextColor="@color/textColorPrimary"
